# customizing_django_admin

./: README.md  pyproject.toml
custom_admin/: db.sqlite3
custom_admin/app/: admin.py  models.py
custom_admin/app/migrations/: 0001_initial.py  0002_relatedmodel.py  0003_remove_mymodel_email_remove_mymodel_name_and_more.py
custom_admin/custom_admin/: settings.py  urls.py
